# llama_parse

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  examples  extract.md  index.md  package.json  parse.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.changeset/: angry-insects-flash.md  big-bottles-flash.md  brave-moments-type.md  brave-ways-obey.md  breezy-clocks-make.md  bumpy-taxes-buy.md  eager-rings-shave.md  honest-eggs-study.md  itchy-moles-shave.md  legal-dodos-greet.md  lemon-goats-push.md  lemon-jobs-watch.md  nasty-jeans-fall.md  new-bugs-strive.md  new-groups-lay.md  quick-seas-camp.md  seven-readers-poke.md  shy-shoes-bow.md  silent-impalas-chew.md  (+11 more)
py/: CHANGELOG.md  Makefile  README.md  package.json  pyproject.toml
py/llama_cloud_services/: __init__.py  constants.py  utils.py
py/llama_cloud_services/beta/agent_data/: client.py  schema.py
py/llama_cloud_services/beta/classifier/: __init__.py  client.py
py/llama_cloud_services/beta/sheets/: client.py  types.py
py/llama_cloud_services/extract/: extract.py
py/llama_cloud_services/files/: client.py
py/llama_cloud_services/index/: base.py
py/llama_cloud_services/parse/: base.py  types.py
py/llama_parse/: CHANGELOG.md  README.md  package.json  pyproject.toml
py/tests/: conftest.py  test_files_client.py
py/tests/beta/agent_data/: test_agent_data_client.py  test_agent_data_schema.py
py/tests/beta/sheets/: test_sheets.py
py/tests/classifier/: test_client.py
py/tests/extract/: conftest.py  test_benchmark.py  test_extract_api.py  test_extract_e2e.py  util.py
py/tests/index/: test_index.py
py/tests/parse/: test_llama_parse.py  test_llama_parse_result.py
py/tests/report/: test_llama_report.py
py/unit_tests/: test_utils.py
py/unit_tests/beta/agent/: test_agent_data_client_untyped.py  test_agent_data_schema.py
py/unit_tests/data/: capacitor.json
py/unit_tests/extract/: test_extract.py
py/unit_tests/index/: test_unit_index.py
py/unit_tests/parse/: test_base.py
(+183 files in other folders)
