[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9",
  "pytest-asyncio",
  "ipykernel>=6.29.0,<7"
]

[project]
name = "llama-parse"
version = "0.6.63"
description = "Parse files into RAG-Optimized formats."
authors = [{name = "Logan Markewich", email = "logan@llamaindex.ai"}]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = ["llama-cloud-services>=0.6.63"]

[project.scripts]
llama-parse = "llama_parse.cli.main:parse"

[tool.hatch.build.targets.sdist]
include = ["llama_parse"]

[tool.hatch.build.targets.wheel]
include = ["llama_parse"]
